
                   Zii Extension Library for Yii Change Log
                   ========================================


Version 1.1.0 to be released
----------------------------
